kubernetes/ampel-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ampel-ui-endpoint
  labels:
    app: ampel-ui-endpoint
spec:
  replicas: 1
  template:
    metadata:
      name: ampel-ui-endpoint
      labels:
        app: ampel-ui-endpoint
    spec:
      containers:
        - name: ampel-ui-service
          image: registry.projectdw.de/ampel-graqhql-website
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.20"
            limits:
              memory: "1Gi"
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
  selector:
    matchLabels:
      app: ampel-ui-endpoint
