kubernetes/ampel-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ampel-ui-service
spec:
  selector:
    app: ampel-ui-endpoint
  ports:
    - port: 80
  type: NodePort
