kubernetes/ampel-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ampel-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"

    #nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
    - hosts:
        - ampel-tracker.projectdw.de
      secretName: ampel-tracker-ingress
  rules:
    - host: ampel-tracker.projectdw.de
      http:
        paths:
          - backend:
              service:
                name: ampel-ui-service
                port:
                  number: 80
            path: "/"
            pathType: "ImplementationSpecific"
